# tap-yandex-metrica

./: .env.example  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_yandex_metrica/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
